style(feature__sm): fix white space
This commit is to remove white spaces in the feature info and image
blocks for sm screens.

The change will ensure that the two blocks on the page renders well on
sm devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -1307,7 +1307,7 @@ vertical-align: top;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .main__feature {
@@ -1316,7 +1316,8 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  gap: 4.5rem;
+  gap: 1.5rem;
+  margin-bottom:3rem;
 }
 
 .feature__image-block {
@@ -1347,7 +1348,7 @@ vertical-align: top;
 }
 
 .feature__info-heading {
-  font-size: 2.7rem;
+  font-size: 2.4rem;
   color: #000000;
   font-weight: 600;
   line-height:1.2;
@@ -1372,7 +1373,7 @@ vertical-align: top;
 }
 
 .feature__link {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   text-decoration: underline;
   font-weight:600;
 }
